--- a/src/test/Dockerfile
+++ b/src/test/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY target/Containers-0.0.1-SNAPSHOT.jar /app
+COPY target/Week11_Containerized_B-0.0.1-SNAPSHOT.jar /app
 
 EXPOSE 8082
 
-CMD ["java", "-jar", "Containers-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "Week11_Containerized_B-0.0.1-SNAPSHOT.jar"]
